--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <h2>My Portfolio</h2>
         </div>
 
-        <ul id="portfolio-flters" class="d-flex justify-content-center">
+        <!-- <ul id="portfolio-flters" class="d-flex justify-content-center">
 
         </ul>
 
@@ -173,10 +173,9 @@
               <a href="portfolio-details1.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div> 
-        </div>
+        </div> -->
 
         <div class="section-title">
-
           <h4>Coding Challenges</h4>
         </div>
 
