adjusted spacing in text of coding challenge hover

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-img"><img src="assets/img/portfolio/codingChallenge-1.png" class="img-fluid" alt=""></div>
           <div class="portfolio-info">
-            <h4>A* Pathfinding Visualizer</h4>
-            <p>Algorithm Visualization Tool using Python and Pygame</p>
+            <h4>A* Pathfinding Algorithm Visualizer</h4>
+            <p>Algorithm Visualization Tool using <br> Python and Pygame</p>
             <a href="assets/img/portfolio/codingChallenge-1.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Image"><i class="bx bx-plus"></i></a>
             <a href="https://github.com/kristcar/A-Star-Pathfinding-Visualizer" class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
           </div>
