--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-              <div class="portfolio-img"><img src="assets/img/portfolio/codingChallenge-3.PNG" class="img-fluid" alt=""></div>
+              <div class="portfolio-img"><img src="assets/img/portfolio/codingChallenge-3.png" class="img-fluid" alt=""></div>
                 <div class="portfolio-info">
                   <h4>Super Mario Themed Google Map</h4>
                   <p>Customized Super Mario Themed Map <br> using the Google Maps Javascript API</p>
