--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                   <p>Customized Super Mario Themed Map <br> using the Google Maps Javascript API</p>
                   <a href="assets/img/portfolio/codingChallenge-3.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Image"><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/kristcar/Super-Mario-Themed-Map-with-Google-Map-API" class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
         
