--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Kristin Caras</h3>
-      <p>Connect with me on LinkedIn and Github!</p>
+      <p>Connect with me on Linkedin and Github!</p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/kristin-caras/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href = "https://github.com/kristcar" class = "github"><i class = "bx bxl-github"></i></a>
