added black belt

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="resume-item">
               <h4>Coding Dojo</h4>
               <p><em>Coding Bootcamp</em></p>
-              <p>A full stack development course that developed my skills in HTML, CSS, Javascript, Python and Django.</p>
+              <p>A full stack development course that developed my skills in HTML, CSS, Javascript, Python and Django where I received the highest accolade, the black belt.</p>
             </div>
           </div>
           <div class="col-lg-6">
