added My Voice links, updated work history

--- a/index.html
+++ b/index.html
@@ -136,10 +136,14 @@
               <p><em>EDiS Company, Wilmington, DE </em></p>
               <p>
               <ul>
-                <li>Responsible for reviewing all products for construction projects for conformance to construction documents on multi-million dollar projects.</li>
-                <li>Experience preparing for and leading meetings with both teammates and clients. </li>
-                <li>Management experience supervising groups of contractors to assure compliance to construction guidelines. </li>
-                <li>Experience working on tight deadlines with limited budgets. </li>
+                <li>Managed 50+ contractors on diverse projects ranging from $3-$60 million.</li>
+                <li>Led daily coordination meetings with the design team, coordinating the review of every request for information and submittal relating to the project, ensuring each item was answered on time.</li>
+                <li>Presented project updates monthly to clients on behalf of the team </li>
+                <li>Led weekly project meetings to assure all critical schedule dates were being met.</li>
+                <li>Coordinated tight deadlines and construction sequencing with contractors utilizing Microsoft Project.</li>
+                <li>Created training tools for contractors and design team members that eliminated the need for over 50 in-person training meetings throughout the course of a project. </li>
+                <li>Developed and maintained updated Bluebeam set files that track all current construction documents shared both internally and externally with clients and contractors. </li>
+                
               </ul>
               </p>
             </div>
@@ -163,16 +167,14 @@
         </ul>
 
         <div class="row portfolio-container">
-
-          
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/welcome.gif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>My Voice</h4>
               <p>A multifaceted communication device <br> aimed to serve the autism community. A full stack application using Python and Django.</p>            
               <a href="https://github.com/kristcar/Speech_Output" class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
             </div>
-          </div>  
+          </div>   -->
           <!-- <div class = "portfolio_video d-inline">
             <div class = "portfolio-item d-inline">
               <p>A multifaceted communication device aimed to serve the autism community. A full stack application using Python and Django.</p>
@@ -183,6 +185,19 @@
           </div> -->
         </div>
 
+        <div class = "mx-auto">
+          <h3>My Voice</h3>
+          <p>My Voice is a multifaceted communication tool with three main features: Picture to Speak, Type to Speak and Speech to Text, built with the Javascript WebSpeech API, Javascript, Python and Django. My Voice facilitates essential communication for people with special needs in both business and personal settings. Allows users speak into their computer microphone to generate and copy text, type a message that will be read aloud, or to create symbolic picture symbols that will speak a given message when clicked. </p>
+          <img src="assets/img/portfolio/welcome.gif" width = "550px">
+          <img src="assets/img/portfolio/pic_speak.gif" width = "550px">
+
+          <a href = "http://3.143.250.167/">
+            <button type="button" class="btn btn-light mt-3">My Voice Website</button></a>
+          <a href = "https://github.com/kristcar/Speech_Output">
+            <button type="button" class="btn btn-light mt-3 ">Github Repository</button></a>
+          <a href = "https://www.youtube.com/watch?v=_yEom-lv5zE">
+            <button type="button" class="btn btn-light mt-3 ">Video Demonstration</button></a>
+        </div>
 
         <div class="row portfolio-container"></div>
           <div class="section-title">
