adjusting button placement on portfolio

--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
           <p>My Voice is a multifaceted communication tool with three main features: Picture to Speak, Type to Speak and Speech to Text, built with the Javascript WebSpeech API, Javascript, Python and Django. My Voice facilitates essential communication for people with special needs in both business and personal settings. Allows users speak into their computer microphone to generate and copy text, type a message that will be read aloud, or to create symbolic picture symbols that will speak a given message when clicked. </p>
           <img src="assets/img/portfolio/welcome.gif" width = "550px">
           <img src="assets/img/portfolio/pic_speak.gif" width = "550px">
-
+        </div>
+        <div class = "mx-auto">
           <a href = "http://3.143.250.167/">
             <button type="button" class="btn btn-light mt-3">My Voice Website</button></a>
           <a href = "https://github.com/kristcar/Speech_Output">
