portfolio buttons open in new tab

--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
           <img src="assets/img/portfolio/pic_speak.gif" width = "550px">
         </div>
         <div class = "mx-auto">
-          <a href = "http://3.143.250.167/">
+          <a href = "http://3.143.250.167/" target="_blank" >
             <button type="button" class="btn btn-light mt-3">My Voice Website</button></a>
-          <a href = "https://github.com/kristcar/Speech_Output">
+          <a href = "https://github.com/kristcar/Speech_Output"  target="_blank">
             <button type="button" class="btn btn-light mt-3 ">Github Repository</button></a>
-          <a href = "https://www.youtube.com/watch?v=_yEom-lv5zE">
+          <a href = "https://www.youtube.com/watch?v=_yEom-lv5zE"  target="_blank">
             <button type="button" class="btn btn-light mt-3 ">Video Demonstration</button></a>
         </div>
 
