update work exp.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Kristin Caras</h4>
-              <p><em>After receiving my mechanical engineering degree, I realized that I am most passionate about solving problems. I love to code because it allows me to be both creative and a problem solver. </em></p>
+              <p><em>A software engineer with a degree in Mechanical Engineering and 4 years of project management expertise.  An agile learner passionate about leveraging burgeoning full stack software skills to create solutions that solves problems and impact technical teams.  </em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -125,7 +125,7 @@
             <div class="resume-item">
               <h4>Coding Dojo</h4>
               <p><em>Coding Bootcamp</em></p>
-              <p>A full stack development course that developed my skills in HTML, CSS, Javascript, Python and Django where I received the highest accolade, the black belt.</p>
+              <p>Intensive Full-Stack Training Program: Earned <strong>“black belt,”</strong> Coding Dojo’s highest knowledge level</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -136,14 +136,13 @@
               <p><em>EDiS Company, Wilmington, DE </em></p>
               <p>
               <ul>
-                <li>Managed 50+ contractors on diverse projects ranging from $3-$60 million.</li>
-                <li>Led daily coordination meetings with the design team, coordinating the review of every request for information and submittal relating to the project, ensuring each item was answered on time.</li>
-                <li>Presented project updates monthly to clients on behalf of the team </li>
+                <li>Managed 50+ contractors on diverse construction projects ranging from $3-$60 million</li>
+                <li>Optimized resources by leading efforts to scale training and onboarding of new team members through creation and implementation of training tools in the onboarding process of projects to eliminate need for 50 + in-person trainings</li>
+                <li>Developed and maintained PM software (Bluebeam) to build project roadmaps and dependencies that tracked all construction documents, enabling consistent communication between internal and external stakeholders </li>
+                <li>Led daily coordination meetings with the design team, coordinating the review of every request for information and submittal relating to the project, ensuring each item was answered on time. </li>
+                <li>Presented project updates monthly to clients on behalf of the team.</li>
                 <li>Led weekly project meetings to assure all critical schedule dates were being met.</li>
-                <li>Coordinated tight deadlines and construction sequencing with contractors utilizing Microsoft Project.</li>
-                <li>Created training tools for contractors and design team members that eliminated the need for over 50 in-person training meetings throughout the course of a project. </li>
-                <li>Developed and maintained updated Bluebeam set files that track all current construction documents shared both internally and externally with clients and contractors. </li>
-                
+                <li>Coordinated tight deadlines and construction sequencing with contractors utilizing Microsoft Project.</li>                
               </ul>
               </p>
             </div>
