added team spot to portfolio

--- a/index.html
+++ b/index.html
@@ -198,6 +198,26 @@
           <a href = "https://www.youtube.com/watch?v=_yEom-lv5zE"  target="_blank">
             <button type="button" class="btn btn-light mt-3 ">Video Demonstration</button></a>
         </div>
+        <br>
+        <br>
+        <div class = "mx-auto">
+          <h3>Team Spot</h3>
+          <p>Team Spot is a project management tool where users can create and join different projects, create and assign action items to one another, as well as post on a communal message board. </p>
+          <p>Team Spot is a group project with three other collaborators, where I was the team lead and owner of the github repository. I worked on the back end of each feature of the project.</p>
+          <img src="assets/img/portfolio/dash.gif" width = "550px">
+          <img src="assets/img/portfolio/tasks.gif" width = "550px">
+        </div>
+        <div class = "mx-auto">
+          <!-- <a href = "http://3.143.250.167/" target="_blank" >
+            <button type="button" class="btn btn-light mt-3">Team Spot Website</button></a> -->
+          <a href = "https://github.com/kristcar/Team-Spot"  target="_blank">
+            <button type="button" class="btn btn-light mt-3 ">Github Repository</button></a>
+          <a href = "https://www.youtube.com/watch?v=R9kwZCsJ4yQ"  target="_blank">
+            <button type="button" class="btn btn-light mt-3 ">Video Demonstration</button></a>
+        </div>
+
+
+
 
         <div class="row portfolio-container"></div>
           <div class="section-title">
