added info to team spot section

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <br>
         <div class = "mx-auto">
           <h3>Team Spot</h3>
-          <p>Team Spot is a project management tool where users can create and join different projects, create and assign action items to one another, as well as post on a communal message board. </p>
+          <p>Team Spot is a project management tool where users can create and join different projects, create and assign action items to one another, as well as post on a communal message board. Team Spot was created using Python, Javascript and Django.</p>
           <p>Team Spot is a group project with three other collaborators, where I was the team lead and owner of the github repository. I worked on the back end of each feature of the project.</p>
           <img src="assets/img/portfolio/dash.gif" width = "550px">
           <img src="assets/img/portfolio/tasks.gif" width = "550px">
