update to team spot section

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
           <img src="assets/img/portfolio/tasks.gif" width = "550px">
         </div>
         <div class = "mx-auto">
-          <!-- <a href = "http://3.143.250.167/" target="_blank" >
-            <button type="button" class="btn btn-light mt-3">Team Spot Website</button></a> -->
+          <a href = "http://3.129.61.155/" target="_blank" >
+            <button type="button" class="btn btn-light mt-3">Team Spot Website</button></a>
           <a href = "https://github.com/kristcar/Team-Spot"  target="_blank">
             <button type="button" class="btn btn-light mt-3 ">Github Repository</button></a>
           <a href = "https://www.youtube.com/watch?v=R9kwZCsJ4yQ"  target="_blank">
