--- a/index.html
+++ b/index.html
@@ -225,6 +225,18 @@
           </div>
           <div class= "row portfolio-container">
 
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-img"><img src="assets/img/portfolio/clock2.gif" class="img-fluid" alt=""></div>
+              <div class="portfolio-info">
+                <h4>Clock</h4>
+                <p>Clock made with HTML5 Canvas and the <br> p5 Library</p>
+                <a href="assets/img/portfolio/clock.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Image"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/kristcar/clock"  target="_blank"class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-img"><img src="assets/img/portfolio/QuickSortVisualizer.gif" class="img-fluid" alt=""></div>
               <div class="portfolio-info">
