--- a/index.html
+++ b/index.html
@@ -280,6 +280,15 @@
             </div>
           </div>
     
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="assets/img/portfolio/twiliotext.gif" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Twilio API Text App</h4>
+              <p>A simple implementation of the <br> Twilio API to send texts</p>
+
+              <a href="https://github.com/kristcar/Texting-App" target="_blank" class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
         </div>   
       </div>
