--- a/index.html
+++ b/index.html
@@ -290,6 +290,15 @@
               <a href="https://github.com/kristcar/Super-Mario-Themed-Map-with-Google-Map-API" target="_blank" class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="assets/img/portfolio/focus_tree.gif" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Focus Forest</h4>
+              <p>Productivity Tracker made with <br> no code platform, Adalo</p>
+              <a href="https://kristin-caras.adalo.com/focus-forest" target="_blank" class="details-link" title="Go to Focus Forest"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
     
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/twiliotext.gif" class="img-fluid" alt=""></div>
