added Adventure Awaits to mini projects

--- a/index.html
+++ b/index.html
@@ -266,6 +266,17 @@
               </div>
             </div>
 
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-img"><img src="assets/img/portfolio/adventure_awaits.gif" class="img-fluid" alt=""></div>
+              <div class="portfolio-info">
+                <h4>Adventure Awaits</h4>
+                <p>A responsive travel page made with React</p>
+                <a href="https://github.com/kristcar/Adventure_Awaits"  target="_blank"class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-img"><img src="assets/img/portfolio/mazegif.gif" class="img-fluid" alt=""></div>
               <div class="portfolio-info">
