--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/trex.gif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>T-Rex Run Remake</h4>
-              <p>A remake of Chrome's T-Rex Run with speech commands! Uses JavaScript, the ml5 library and the p5 Library</p>
+              <h4>T-Rex Run</h4>
+              <p>A remake of Chrome's T-Rex Run that is <br> played with speech commands. Made with<br> JavaScript, the ml5 library and the p5 Library</p>
               <a href="assets/img/portfolio/trex.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="View Image"><i class="bx bx-plus"></i></a>
               <a href="https://github.com/kristcar/T-Rex-Run" target="_blank" class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
             </div>
