--- a/index.html
+++ b/index.html
@@ -259,13 +259,13 @@
               <div class="portfolio-info">
                 <h4>Minesweeper</h4>
                 <p>Minesweeper made with Javascript and <br>the p5 Library</p>
-                <a href="assets/img/portfolio/minesweeper.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Image"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/minesweeper.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="View Image"><i class="bx bx-plus"></i></a>
                 <a href="https://github.com/kristcar/minesweeper"  target="_blank"class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
 
-          
+  
         
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/astar.gif" class="img-fluid" alt=""></div>
