changed Clock project description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -32,7 +33,8 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-</head>
+
+
 
 <body>
 
@@ -332,7 +334,7 @@
             <div class="portfolio-img"><img src="assets/img/portfolio/clock2.gif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Clock</h4>
-              <p>Clock made with HTML5 Canvas and the <br> p5 Library</p>
+              <p>Clock made with Javascript, the HTML5 <br> Canvas and the  p5 Library</p>
               <a href="assets/img/portfolio/clock.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Image"><i class="bx bx-plus"></i></a>
               <a href="https://github.com/kristcar/clock"  target="_blank"class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
             </div>
