update to resume

--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Kristin Caras</h4>
-              <p><em>A software engineer with a degree in Mechanical Engineering and 4 years of project management expertise.  An agile learner passionate about leveraging burgeoning full stack software skills to create solutions that solves problems and impact technical teams.  </em></p>
+              <p><em>A software engineer with a degree in Mechanical Engineering and over 4 years of project management expertise.  An agile learner passionate about leveraging burgeoning full stack software skills to create solutions that solves problems and impact technical teams.  </em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelors of Science ; Mechanical Engineering</h4>
-              <h5>2013-2017</h5>
+              <!-- <h5>2013-2017</h5> -->
               <p><em>The University of Delaware, Newark, DE</em></p>
             </div>
 
@@ -132,20 +132,35 @@
           </div>
           <div class="col-lg-6">
 
+            <h3 class="resume-title">Experience</h3>
+            <div class="resume-item">
+              <h4>Launch Engineer</h4>
+              <p><em>Recharge Payments, Remote </em></p>
+              <h5>2021-Present</h5>
+              <p>
+              <ul>
+                <li>Overseeing and managing the building, testing and launch of merchants custom subscription solutions using the Recharge application within the Shopify ecommerce space</li>
+                <li>Ownership of a diverse merchant portfolio, working one-on-one with merchants and their development team throughout the launch process to meet target milestones and revenue goals </li>
+                </li>           
+              </ul>
+              </p>
+            </div>
+
 
             <div class="resume-item">
               <h4>Project Engineer</h4>
               <p><em>EDiS Company, Wilmington, DE </em></p>
+              <h5>2017-2021</h5>
               <p>
               <ul>
-                <li>Managed 50+ contractors on diverse construction projects ranging from $3-$60 million</li>
+                <li>Managed 50+ contractors on diverse projects ranging from $3-$60 million</li>
                 <li>Optimized resources by leading efforts to scale training and onboarding of new team members through creation and implementation of training tools in the onboarding process of projects to eliminate need for 50 + in-person trainings</li>
-                <li>Developed and maintained PM software (Bluebeam) to build project roadmaps and dependencies that tracked all construction documents, enabling consistent communication between internal and external stakeholders </li>
-                <li>Led daily coordination meetings with the design team, coordinating the review of every request for information and submittal relating to the project, ensuring each item was answered on time. </li>
+                <li>Developed and maintained PM software (Bluebeam) to build project roadmaps and dependencies that tracked all project documents, enabling consistent communication between internal and external stakeholders </li>
+                <!-- <li>Led daily coordination meetings with the design team, coordinating the review of every request for information and submittal relating to the project, ensuring each item was answered on time. </li>
                 <li>Presented project updates monthly to clients on behalf of the team.</li>
                 <li>Led weekly project meetings to assure all critical schedule dates were being met.</li>
-                <li>Coordinated tight deadlines and construction sequencing with contractors utilizing Microsoft Project.</li>                
-              </ul>
+                <li>Coordinated tight deadlines and sequencing with contractors utilizing Microsoft Project.</li>                
+              </ul> -->
               </p>
             </div>
           </div>
