--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
               <h5>2021-Present</h5>
               <p>
               <ul>
-                <li>Overseeing and managing the building, testing and launch of merchants custom subscription solutions using the Recharge application within the Shopify ecommerce space</li>
+                <li>Overseeing and managing the building, testing and launch of merchant custom subscription solutions using the Recharge application within the Shopify ecommerce space</li>
                 <li>Ownership of a diverse merchant portfolio, working one-on-one with merchants and their development team throughout the launch process to meet target milestones and revenue goals </li>
                 </li>           
               </ul>
-              </p>
+            </p>  
             </div>
 
 
@@ -262,14 +262,6 @@
               </div>
             </div>
           
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-              <div class="portfolio-img"><img src="assets/img/portfolio/focus_tree.gif" class="img-fluid" alt=""></div>
-              <div class="portfolio-info">
-                <h4>Focus Forest</h4>
-                <p>Productivity Tracker made with <br> no code platform, Adalo</p>
-                <a href="https://kristin-caras.adalo.com/focus-forest" target="_blank" class="details-link" title="Go to Focus Forest"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-img"><img src="assets/img/portfolio/minesweeper.gif" class="img-fluid" alt=""></div>
@@ -278,6 +270,15 @@
                 <p>Minesweeper made with Javascript and <br>the p5 Library</p>
                 <a href="assets/img/portfolio/minesweeper.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="View Image"><i class="bx bx-plus"></i></a>
                 <a href="https://github.com/kristcar/minesweeper"  target="_blank"class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-img"><img src="assets/img/portfolio/focus_tree.gif" class="img-fluid" alt=""></div>
+              <div class="portfolio-info">
+                <h4>Focus Forest</h4>
+                <p>Productivity Tracker made with Adalo</p>
+                <a href="https://kristin-caras.adalo.com/focus-forest" target="_blank" class="details-link" title="Go to Focus Forest"><i class="bx bx-link"></i></a>
               </div>
             </div>
 
