--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
 
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-img"><img src="assets/img/portfolio/flashchat.gif" class="img-fluid" alt=""></div>
+              <div class="portfolio-info">
+                <h4>Flash Chat</h4>
+                <p>A messaging app made with Swift</p>
+                <a href="https://github.com/kristcar/swift_chat"  target="_blank"class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-img"><img src="assets/img/portfolio/adventure_awaits.gif" class="img-fluid" alt=""></div>
               <div class="portfolio-info">
                 <h4>Adventure Awaits</h4>
