--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
       <div class="container">
 
         <div class="section-title">
-          <span>My Portfolio</span>
-          <h2>My Portfolio</h2>
+          <span>Favorite Projects</span>
+          <h2>Favorite Projects</h2>
         </div>
 
         <ul id="portfolio-flters" class="d-flex justify-content-center">
@@ -238,7 +238,7 @@
 
         <div class="row portfolio-container"></div>
           <div class="section-title">
-            <h4>Mini Projects</h4>
+            <h4>More Projects</h4>
           </div>
           <div class= "row portfolio-container">
 
