--- a/index.html
+++ b/index.html
@@ -234,8 +234,6 @@
         </div>
 
 
-
-
         <div class="row portfolio-container"></div>
           <div class="section-title">
             <h4>More Projects</h4>
@@ -351,7 +349,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/blob.gif" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>The Blob and Perlin Noise</h4>
+              <h4>Perlin Noise Study</h4>
               <p>A simple implementation of <br> perlin noise on an ellipse using the p5 Library</p>
               <a href="https://github.com/kristcar/The-Blob-and-Perlin-Noise" target="_blank" class="details-link" title="View on Github"><i class="bx bx-link"></i></a>
             </div>
