--- a/index.html
+++ b/index.html
@@ -132,15 +132,30 @@
           </div>
           <div class="col-lg-6">
 
+
             <h3 class="resume-title">Experience</h3>
+            <div class="resume-item">
+              <h4>Senior Implementation Engineer</h4>
+              <p><em>Recharge Payments, Remote </em></p>
+              <h5>September 2022-Present</h5>
+              <p>
+              <ul>
+                <!-- <li>Overseeing and managing the building, testing and launch of merchant custom subscription solutions using the Recharge application within the Shopify ecommerce space</li> -->
+                <li>Ownership of a diverse merchant portfolio; working one-on-one with the largest merchants and their development teams that enter Implementations to meet target milestones and revenue goals </li>
+                </li>           
+              </ul>
+            </p>  
+            </div>
+
+
             <div class="resume-item">
               <h4>Implementation Engineer</h4>
               <p><em>Recharge Payments, Remote </em></p>
-              <h5>2021-Present</h5>
+              <h5>August 2021- September 2022</h5>
               <p>
               <ul>
-                <li>Overseeing and managing the building, testing and launch of merchant custom subscription solutions using the Recharge application within the Shopify ecommerce space</li>
-                <li>Ownership of a diverse merchant portfolio, working one-on-one with merchants and their development team throughout the launch process to meet target milestones and revenue goals </li>
+                <li>Managed the building, testing and launch of merchant custom subscription solutions using the Recharge application within the Shopify ecommerce space</li>
+                <!-- <li>Ownership of a diverse merchant portfolio, working one-on-one with merchants and their development team throughout the launch process to meet target milestones and revenue goals </li> -->
                 </li>           
               </ul>
             </p>  
