updates to resume

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Kristin Caras</h1>
-      <h2>Software Developer</h2>
+      <h2>Senior Implementation Engineer</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -81,15 +81,17 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
+                    <br>
                     <li><i class="icofont-rounded-right"></i> <strong>Name:</strong> Kristin Caras</li>
                     <li><i class="icofont-rounded-right"></i> <strong>Location:</strong> Delaware, USA</li>
+                    <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> kristincaras1@gmail.com</li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
+                    <br>
                     <li><i class="icofont-rounded-right"></i> <strong>School:</strong> The University of Delaware</li>                    
                     <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Mechanical Engineering</li>
-                    <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> kristincaras1@gmail.com</li>
                   </ul>
                 </div>
               </div>
@@ -114,19 +116,19 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Kristin Caras</h4>
-              <p><em>A software engineer with a degree in Mechanical Engineering and over 4 years of project management expertise.  An agile learner passionate about leveraging burgeoning full stack software skills to create solutions that solves problems and impact technical teams.  </em></p>
+              <p><em>A Senior Implementation Engineer with a degree in Mechanical Engineering and over 6 years of project management expertise.  An agile learner passionate about leveraging burgeoning full stack software skills to create solutions that solves problems and impact technical teams.  </em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelors of Science ; Mechanical Engineering</h4>
               <!-- <h5>2013-2017</h5> -->
-              <p><em>The University of Delaware, Newark, DE</em></p>
+              <p><em><strong>The University of Delaware, Newark, DE</strong></em></p>
             </div>
 
             <div class="resume-item">
-              <h4>Coding Dojo</h4>
-              <p><em>Coding Bootcamp</em></p>
+              <h4>Coding Bootcamp Graduate</h4>
+              <p><em><strong>Coding Dojo</strong></em></p>
               <p>Intensive Full-Stack Training Program: Earned <strong>“black belt,”</strong> Coding Dojo’s highest knowledge level</p>
             </div>
           </div>
@@ -136,41 +138,39 @@
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>Senior Implementation Engineer</h4>
-              <p><em>Recharge Payments, Remote </em></p>
               <h5>September 2022-Present</h5>
+              <h4>Implementation Engineer</h4>
+              <h5>August 2021- September 2022</h5>
+              <p><em><strong>Recharge, Remote</strong> </em></p>
               <p>
               <ul>
                 <!-- <li>Overseeing and managing the building, testing and launch of merchant custom subscription solutions using the Recharge application within the Shopify ecommerce space</li> -->
-                <li>Ownership of a diverse merchant portfolio; working one-on-one with the largest merchants and their development teams that enter Implementations to meet target milestones and revenue goals </li>
-                </li>           
+                <!-- <li>Ownership of a diverse merchant portfolio; working one-on-one with the largest merchants and their development teams that enter Implementations to meet target milestones and revenue goals </li> -->
+                <li>Awarded membership to Recharge's Presidents Club for 2022 calendar year achievements, including personally closing about 30% of the Strategic team’s quota for 2022, bringing in over $3 million to Recharge across some of the largest merchants on the platform.</li>  
+                <li>Awarded company wide “Value Champion” award for October of 2023 for success in navigating particularly complex and challenging launches, data migrations and client relationships that have come through the Implementations pipeline to date.
+                </li>       
+                <li>Direct point of contact for client communications, by email and by weekly Zoom meetings, keeping clients engaged and committed to the platform pre-launch, and to keep clients on schedule to launch by contracted date.  On average in 2022, I held 9.1 calls per week, whereas the Strategic team’s average calls per week was 2.6</li>
+                <li>Ownership of escalations and incident management as it relates to technical issues with launching the storefront or with data migrations. From expertise in this area, introduced and maintained the Migration Runbook document, as well as the Migration plan template within the Implementation team’s GuideCX platform, both of which rolled out to the Implementation team as standard practices. </li>
+                <li>Creation of internal documentation as it relates to project management (Implementation Team Knowledge Base), data migration planning (Migration Runbook), etc. to establish and improve Implementation team workflows.
+                </li>
+                <li>Participated in interview panels to help hire two new Sr. Implementation Engineers, direct 1:1 mentorship and training of one.
+                </li>
               </ul>
             </p>  
             </div>
 
 
-            <div class="resume-item">
-              <h4>Implementation Engineer</h4>
-              <p><em>Recharge Payments, Remote </em></p>
-              <h5>August 2021- September 2022</h5>
-              <p>
-              <ul>
-                <li>Managed the building, testing and launch of merchant custom subscription solutions using the Recharge application within the Shopify ecommerce space</li>
-                <!-- <li>Ownership of a diverse merchant portfolio, working one-on-one with merchants and their development team throughout the launch process to meet target milestones and revenue goals </li> -->
-                </li>           
-              </ul>
-            </p>  
-            </div>
 
 
             <div class="resume-item">
               <h4>Project Engineer</h4>
-              <p><em>EDiS Company, Wilmington, DE </em></p>
+              <p><em><strong>EDiS Company, Wilmington, DE </strong></em></p>
               <h5>2017-2021</h5>
               <p>
               <ul>
-                <li>Managed 50+ contractors on diverse projects ranging from $3-$60 million</li>
+                <li>Managed 50+ contractors on diverse projects, from football stadiums to historic renovations, ranging from $3-$60 million via running weekly standups, maintaining project agendas, meeting minutes, submittal documentation and client relationships.</li>
                 <li>Optimized resources by leading efforts to scale training and onboarding of new team members through creation and implementation of training tools in the onboarding process of projects to eliminate need for 50 + in-person trainings</li>
-                <li>Developed and maintained PM software (Bluebeam) to build project roadmaps and dependencies that tracked all project documents, enabling consistent communication between internal and external stakeholders </li>
+                <li>Developed and maintained PM software (Bluebeam) to build project roadmaps and dependencies that tracked all project documents, enabling consistent communication between internal and external stakeholders  </li>
                 <!-- <li>Led daily coordination meetings with the design team, coordinating the review of every request for information and submittal relating to the project, ensuring each item was answered on time. </li>
                 <li>Presented project updates monthly to clients on behalf of the team.</li>
                 <li>Led weekly project meetings to assure all critical schedule dates were being met.</li>
@@ -223,8 +223,8 @@
           <img src="assets/img/portfolio/pic_speak.gif" width = "550px">
         </div>
         <div class = "mx-auto">
-          <a href = "http://3.143.250.167/" target="_blank" >
-            <button type="button" class="btn btn-light mt-3">My Voice Website</button></a>
+          <!-- <a href = "http://3.143.250.167/" target="_blank" >
+            <button type="button" class="btn btn-light mt-3">My Voice Website</button></a> -->
           <a href = "https://github.com/kristcar/Speech_Output"  target="_blank">
             <button type="button" class="btn btn-light mt-3 ">Github Repository</button></a>
           <a href = "https://www.youtube.com/watch?v=_yEom-lv5zE"  target="_blank">
@@ -240,8 +240,8 @@
           <img src="assets/img/portfolio/tasks.gif" width = "550px">
         </div>
         <div class = "mx-auto">
-          <a href = "http://3.129.61.155/" target="_blank" >
-            <button type="button" class="btn btn-light mt-3">Team Spot Website</button></a>
+          <!-- <a href = "http://3.129.61.155/" target="_blank" >
+            <button type="button" class="btn btn-light mt-3">Team Spot Website</button></a> -->
           <a href = "https://github.com/kristcar/Team-Spot"  target="_blank">
             <button type="button" class="btn btn-light mt-3 ">Github Repository</button></a>
           <a href = "https://www.youtube.com/watch?v=R9kwZCsJ4yQ"  target="_blank">
