--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                 <li>Awarded company wide “Value Champion” award for October of 2023 for success in navigating particularly complex and challenging launches, data migrations and client relationships that have come through the Implementations pipeline to date.
                 </li>       
                 <li>Direct point of contact for client communications, by email and by weekly Zoom meetings, keeping clients engaged and committed to the platform pre-launch, and keeping clients on schedule to launch by contracted date.  On average in 2022, I held 9.1 calls per week, whereas the Strategic team’s average calls per week was 2.6</li>
-                <li>Ownership of escalations and incident management as it relates to technical issues with launching the storefront or with data migrations. From expertise in this area, introduced and maintained the Migration Runbook document, as well as the Migration plan template within the Implementation team’s GuideCX platform, both of which rolled out to the Implementation team as standard practices. </li>
-                <li>Creation of internal documentation as it relates to project management (Implementation Team Knowledge Base), data migration planning (Migration Runbook), etc. to establish and improve Implementation team workflows.
+                <li>Ownership of escalations and incident management as it relates to technical issues with launching a storefront or with data migrations. From expertise in this area, introduced and maintained the Migration Runbook document, as well as the Migration plan template within the Implementation team’s GuideCX platform, both of which rolled out to the entire Implementation team as standard practices. </li>
+                <li>Established and improved Implementation team workflows with creation of internal documentation hub (Knowledge Base), provided training seminar to Strategic Implementation team on how to structure client calls, use agendas and Drive folders.
                 </li>
                 <li>Participated in interview panels to help hire two new Sr. Implementation Engineers, direct 1:1 mentorship and training of one.
                 </li>
