--- a/index.html
+++ b/index.html
@@ -149,12 +149,13 @@
                 <li>Awarded membership to Recharge's Presidents Club for 2022 calendar year achievements, including personally closing about 30% of the Strategic team’s quota for 2022, bringing in over $3 million to Recharge across some of the largest merchants on the platform.</li>  
                 <li>Awarded company wide “Value Champion” award for October of 2023 for success in navigating particularly complex and challenging launches, data migrations and client relationships that have come through the Implementations pipeline to date.
                 </li>       
-                <li>Direct point of contact for client communications, by email and by weekly Zoom meetings, keeping clients engaged and committed to the platform pre-launch, and keeping clients on schedule to launch by contracted date.  On average in 2022, I held 9.1 calls per week, whereas the Strategic team’s average calls per week was 2.6</li>
+                <li>Direct point of contact for client communications, by email and by weekly Zoom meetings, keeping clients engaged and committed to the platform pre-launch, and keeping clients on schedule to launch by contracted date.  On average in 2022, I held 9.1 calls per week with clients, whereas the Strategic team’s average calls per week was 2.6.</li>
                 <li>Ownership of escalations and incident management as it relates to technical issues with launching a storefront or with data migrations. From expertise in this area, introduced and maintained the Migration Runbook document, as well as the Migration plan template within the Implementation team’s GuideCX platform, both of which rolled out to the entire Implementation team as standard practices. </li>
                 <li>Established and improved Implementation team workflows with creation of internal documentation hub (Knowledge Base), provided training seminar to Strategic Implementation team on how to structure client calls, use agendas and Drive folders.
                 </li>
                 <li>Participated in interview panels to help hire two new Sr. Implementation Engineers, direct 1:1 mentorship and training of one.
                 </li>
+                
               </ul>
             </p>  
             </div>
